--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.local.filesystem.FileSystemActivity"
             android:label="@string/mp.activity.title.file_system"
@@ -69,7 +68,7 @@
         <activity android:name=".ui.settings.change_password" />
         <activity android:name=".ui.settings.music_play_setting" />
         <activity android:name=".ui.settings.AppAboutActivity" />
-
+        <activity android:name=".ui.recommend.RecommendListsActicity"></activity>
     </application>
 
 </manifest>
