--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.local.filesystem.FileSystemActivity"
             android:label="@string/mp.activity.title.file_system"
@@ -68,7 +68,9 @@
         <activity android:name=".ui.settings.change_password" />
         <activity android:name=".ui.settings.music_play_setting" />
         <activity android:name=".ui.settings.AppAboutActivity" />
-        <activity android:name=".ui.recommend.RecommendListsActicity"></activity>
+        <activity android:name=".ui.recommend.RecommendListsActivity" />
+        <activity android:name=".ui.comment.MusicCommentActivity" />
+        <activity android:name=".ui.search.SearchActivity"></activity>
     </application>
 
 </manifest>
