--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,9 +71,9 @@
         <activity android:name=".ui.recommend.RecommendListsActivity" />
         <activity android:name=".ui.comment.MusicCommentActivity" />
         <activity android:name=".ui.search.SearchActivity" />
-        <activity android:name=".ui.settings.CheckCommentActivity" />
-        <activity android:name=".ui.feedback.SubmitFeedbackActivity" />
-        <activity android:name=".ui.feedback.HandleFeedbackActivity"></activity>
+        <activity android:name=".ui.settings.checkcomment.CheckCommentActivity" />
+        <activity android:name=".ui.settings.feedback.SubmitFeedbackActivity" />
+        <activity android:name=".ui.settings.feedback.HandleFeedbackActivity"></activity>
     </application>
 
 </manifest>
